Further updating the examples. Still needs some refinement!

--- a/examples/Wine Data Set Full Data full features.ipynb
+++ b/examples/Wine Data Set Full Data full features.ipynb
@@ -2,18 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import qiskit\n",
-    "from qiskit.backends import BaseBackend\n",
-    "from qiskit.backends.ibmq import IBMQBackend"
+    "from qiskit.providers import BaseBackend\n",
+    "from qiskit.providers.ibmq import IBMQBackend"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dc_qiskit_qml.feature_maps import NormedAmplitudeEncoding\n",
+    "from dc_qiskit_qml.distance_based.hadamard import QmlHadamardNeighborClassifier\n",
+    "from dc_qiskit_qml.distance_based.hadamard.state import QmlGenericStateCircuitBuilder\n",
+    "from dc_qiskit_qml.distance_based.hadamard.state.sparsevector import MöttönenStatePreparation\n",
+    "\n",
+    "initial_state_builder = QmlGenericStateCircuitBuilder(MöttönenStatePreparation())\n",
+    "\n",
+    "execution_backend: BaseBackend = qiskit.Aer.get_backend('qasm_simulator')\n",
+    "qml = QmlHadamardNeighborClassifier(backend=execution_backend,\n",
+    "                                    shots=8192, \n",
+    "                                    classifier_circuit_factory=initial_state_builder,\n",
+    "                                    feature_map=NormedAmplitudeEncoding())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,20 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "preprocessing_pipeline = Pipeline([\n",
-    "    ('scaler',  StandardScaler()),\n",
-    "    ('l2norm', Normalizer(norm='l2', copy=True))\n",
-    "])\n",
-    "X = preprocessing_pipeline.fit_transform(X, y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,31 +61,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qiskit_qml.feature_maps import NormedAmplitudeEncoding\n",
-    "from qiskit_qml.distance_based.hadamard import QmlHadamardNeighborClassifier\n",
-    "from qiskit_qml.distance_based.hadamard.state import QmlGenericStateCircuitBuilder\n",
-    "from qiskit_qml.distance_based.hadamard.state.sparsevector import MöttönenStatePreparation\n",
-    "\n",
-    "initial_state_builder = QmlGenericStateCircuitBuilder(MöttönenStatePreparation())\n",
-    "\n",
-    "execution_backend: BaseBackend = qiskit.Aer.get_backend('qasm_simulator')\n",
-    "qml = QmlHadamardNeighborClassifier(backend=execution_backend,\n",
-    "                                    shots=8192, \n",
-    "                                    classifier_state_factory=initial_state_builder,\n",
-    "                                    feature_map=NormedAmplitudeEncoding())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "qml.fit(X_train, y_train)"
+    "pipeline = Pipeline([\n",
+    "    ('scaler',  StandardScaler()),\n",
+    "    ('l2norm', Normalizer(norm='l2', copy=True)),\n",
+    "    ('qml', qml)\n",
+    "])"
    ]
   },
   {
@@ -87,7 +78,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prediction = qml.predict(X_test)"
+    "pipeline.fit(X_train, y_train)\n",
+    "prediction = pipeline.predict(X_test)"
    ]
   },
   {
@@ -145,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prediction_train = qml.predict(X_train)"
+    "prediction_train = pipeline.predict(X_train)"
    ]
   },
   {
@@ -184,7 +176,7 @@
    ],
    "source": [
     "plt.scatter(\n",
-    "    X_train[:,0], X_train[:,1], \n",
+    "    pipeline.transform(X_train[:,0]), pipeline.transform(X_train[:,1]), \n",
     "    color=[colors[yy] for yy in y_train],\n",
     "    marker='.', s=50)\n",
     "plt.show()"
@@ -208,7 +200,7 @@
    ],
    "source": [
     "plt.scatter(\n",
-    "    X_test[:,0], X_test[:,1], \n",
+    "    pipeline.transform(X_test[:,0]), pipeline.transform(X_test[:,1]), \n",
     "    color=[colors[yy] for yy in prediction],\n",
     "    marker='.', s=50)\n",
     "plt.show()"
@@ -232,7 +224,7 @@
    ],
    "source": [
     "plt.scatter(\n",
-    "    X_test[:,0], X_test[:,1], \n",
+    "    pipeline.transform(X_test[:,0]), pipeline.transform(X_test[:,1]), \n",
     "    color=[colors[yy] for yy in y_test],\n",
     "    marker='.', s=20)\n",
     "plt.show()"
@@ -276,7 +268,10 @@
     }
    ],
    "source": [
-    "for i in range(len(X_test)):\n",
+    "_X_train = pipeline.transform(X_train)\n",
+    "_X_test = pipeline.transform(X_test)\n",
+    "\n",
+    "for i in range(len(_X_test)):\n",
     "    print(\"{:.4f} ~~ {:.4f}\".format(qml.last_predict_p_acc[i], \n",
     "                                    QmlHadamardNeighborClassifier.p_acc_theory(X_train, y_train, X_test[i])))"
    ]
@@ -16743,7 +16738,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
