--- a/examples/Wine Data Set Full Data.ipynb
+++ b/examples/Wine Data Set Full Data.ipynb
@@ -13,6 +13,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from qiskit_qml.feature_maps import NormedAmplitudeEncoding\n",
+    "from qiskit_qml.distance_based.hadamard import QmlHadamardNeighborClassifier\n",
+    "from qiskit_qml.distance_based.hadamard.state import QmlGenericStateCircuitBuilder\n",
+    "from qiskit_qml.distance_based.hadamard.state.sparsevector import MöttönenStatePreparation\n",
+    "\n",
+    "initial_state_builder = QmlGenericStateCircuitBuilder(MöttönenStatePreparation())\n",
+    "\n",
+    "execution_backend: BaseBackend = qiskit.Aer.get_backend('qasm_simulator')\n",
+    "qml = QmlHadamardNeighborClassifier(backend=execution_backend,\n",
+    "                                    shots=8192, \n",
+    "                                    classifier_state_factory=initial_state_builder,\n",
+    "                                    feature_map=NormedAmplitudeEncoding())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
@@ -25,7 +45,8 @@
     "from sklearn.datasets import load_wine\n",
     "from sklearn.decomposition import PCA\n",
     "\n",
-    "X, y = load_wine(True)"
+    "X, y = load_wine(True)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.10, random_state=42)"
    ]
   },
   {
@@ -34,12 +55,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "preprocessing_pipeline = Pipeline([\n",
+    "pipeline = Pipeline([\n",
     "    ('scaler',  StandardScaler()),\n",
     "    ('pca2',  PCA(n_components=2)),\n",
-    "    ('l2norm', Normalizer(norm='l2', copy=True))\n",
-    "])\n",
-    "X = preprocessing_pipeline.fit_transform(X, y)"
+    "    ('l2norm', Normalizer(norm='l2', copy=True)),\n",
+    "    ('qml', qml)\n",
+    "])"
    ]
   },
   {
@@ -71,12 +92,15 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "\n",
+    "_X = pipeline.fit_transform(X, y)\n",
+    "\n",
     "figure = plt.figure(figsize=(5,5), num=2)\n",
     "sub1 = figure.subplots(nrows=1, ncols=1)\n",
     "\n",
-    "class_0_data = np.asarray([X[i] for i in range(len(X)) if y[i] == 0])\n",
-    "class_1_data = np.asarray([X[i] for i in range(len(X)) if y[i] == 1])\n",
-    "class_2_data = np.asarray([X[i] for i in range(len(X)) if y[i] == 2])\n",
+    "class_0_data = np.asarray([_X[i] for i in range(len(_X)) if y[i] == 0])\n",
+    "class_1_data = np.asarray([_X[i] for i in range(len(_X)) if y[i] == 1])\n",
+    "class_2_data = np.asarray([_X[i] for i in range(len(_X)) if y[i] == 2])\n",
     "\n",
     "class_0 = sub1.scatter(class_0_data[:,0], class_0_data[:,1], color='red', marker='x', s=50)\n",
     "class_1 = sub1.scatter(class_1_data[:,0], class_1_data[:,1], color='blue', marker='x', s=50)\n",
@@ -118,18 +142,16 @@
     }
    ],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.10, random_state=42)\n",
-    "\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.10, random_state=42)\n",
+    "_X_train, _X_test = pipeline.tranform(X_train), pipeline.transform(X_test)\n",
     "\n",
     "figure = plt.figure(figsize=(10,4.5), num=2)\n",
     "sub1, sub2 = figure.subplots(nrows=1, ncols=2)\n",
     "\n",
-    "class_0_data = np.asarray([X_train[i] for i in range(len(X_train)) if y_train[i] == 0])\n",
-    "class_1_data = np.asarray([X_train[i] for i in range(len(X_train)) if y_train[i] == 1])\n",
-    "class_2_data = np.asarray([X_train[i] for i in range(len(X_train)) if y_train[i] == 2])\n",
+    "class_0_data = np.asarray([_X_train[i] for i in range(len(_X_train)) if y_train[i] == 0])\n",
+    "class_1_data = np.asarray([_X_train[i] for i in range(len(_X_train)) if y_train[i] == 1])\n",
+    "class_2_data = np.asarray([_X_train[i] for i in range(len(_X_train)) if y_train[i] == 2])\n",
     "\n",
     "class_0 = sub1.scatter(class_0_data[:,0], class_0_data[:,1], color='red', marker='x', s=50)\n",
     "class_1 = sub1.scatter(class_1_data[:,0], class_1_data[:,1], color='blue', marker='x', s=50)\n",
@@ -143,9 +165,9 @@
     "sub1.axvline(color='gray')\n",
     "sub1.axhline(color='gray')\n",
     "\n",
-    "class_0_data_test = np.asarray([X_test[i] for i in range(len(X_test)) if y_test[i] == 0])\n",
-    "class_1_data_test = np.asarray([X_test[i] for i in range(len(X_test)) if y_test[i] == 1])\n",
-    "class_2_data_test = np.asarray([X_test[i] for i in range(len(X_test)) if y_test[i] == 2])\n",
+    "class_0_data_test = np.asarray([_X_test[i] for i in range(len(_X_test)) if y_test[i] == 0])\n",
+    "class_1_data_test = np.asarray([_X_test[i] for i in range(len(_X_test)) if y_test[i] == 1])\n",
+    "class_2_data_test = np.asarray([_X_test[i] for i in range(len(_X_test)) if y_test[i] == 2])\n",
     "\n",
     "class_0 = sub2.scatter(class_0_data_test[:,0], class_0_data_test[:,1], color='red', marker='x', s=50)\n",
     "class_1 = sub2.scatter(class_1_data_test[:,0], class_1_data_test[:,1], color='blue', marker='x', s=50)\n",
@@ -161,32 +183,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from qiskit_qml.feature_maps import NormedAmplitudeEncoding\n",
-    "from qiskit_qml.distance_based.hadamard import QmlHadamardNeighborClassifier\n",
-    "from qiskit_qml.distance_based.hadamard.state import QmlGenericStateCircuitBuilder\n",
-    "from qiskit_qml.distance_based.hadamard.state.sparsevector import MöttönenStatePreparation\n",
-    "\n",
-    "initial_state_builder = QmlGenericStateCircuitBuilder(MöttönenStatePreparation())\n",
-    "\n",
-    "execution_backend: BaseBackend = qiskit.Aer.get_backend('qasm_simulator')\n",
-    "qml = QmlHadamardNeighborClassifier(backend=execution_backend,\n",
-    "                                    shots=8192, \n",
-    "                                    classifier_state_factory=initial_state_builder,\n",
-    "                                    feature_map=NormedAmplitudeEncoding())"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "qml.fit(X_train, y_train)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -194,7 +194,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prediction = qml.predict(X_test)"
+    "pipeline.fit(X_train, y_train)\n",
+    "prediction = pipeline.predict(X_test)"
    ]
   },
   {
@@ -252,7 +253,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prediction_train = qml.predict(X_train)"
+    "prediction_train = pipeline.predict(X_train)"
    ]
   },
   {
@@ -315,9 +316,9 @@
     }
    ],
    "source": [
-    "for i in range(len(X_test)):\n",
+    "for i in range(len(_X_test)):\n",
     "    print(\"{:.4f} ~~ {:.4f}\".format(qml.last_predict_p_acc[i], \n",
-    "                                    QmlHadamardNeighborClassifier.p_acc_theory(X_train, y_train, X_test[i])))"
+    "                                    QmlHadamardNeighborClassifier.p_acc_theory(_X_train, y_train, _X_test[i])))"
    ]
   },
   {
@@ -351,9 +352,9 @@
     }
    ],
    "source": [
-    "for i in range(len(X_test)):\n",
+    "for i in range(len(_X_test)):\n",
     "    print(\"{:.4f} ~~ {:.4f}\".format(qml.last_predict_probability[i], \n",
-    "                                   QmlHadamardNeighborClassifier.p_label_theory(X_train, y_train, X_test[i], prediction[i])))"
+    "                                   QmlHadamardNeighborClassifier.p_label_theory(_X_train, y_train, _X_test[i], prediction[i])))"
    ]
   },
   {
@@ -16782,7 +16783,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
