--- a/examples/Iris Example Full data.ipynb
+++ b/examples/Iris Example Full data.ipynb
@@ -212,6 +212,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Size of the training data and therefore the needed amount of qubits to encode the index"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -324,7 +331,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prediction_train = qml.predict(X_train)"
+    "prediction_train = pipeline.predict(X_train)"
    ]
   },
   {
@@ -420,103 +427,6 @@
     "    print(\"{:.4f} ~~ {:.4f}\".format(qml.last_predict_probability[i], \n",
     "                                   QmlHadamardNeighborClassifier.p_label_theory(X_train, y_train, X_test[i], prediction[i])))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "feature_map = NormedAmplitudeEncoding()\n",
-    "\n",
-    "train_data = [feature_map.map(x) for x in X_train]\n",
-    "input_data = feature_map.map(X_test[0])\n",
-    "\n",
-    "initial_state_builder.build_circuit('test', train_data, y_train, input_data)\n",
-    "state_vector = initial_state_builder.get_last_state_vector()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<1024x1 sparse matrix of type '<class 'numpy.complex128'>'\n",
-       "\twith 360 stored elements in Dictionary Of Keys format>"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "state_vector"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Noise analysis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "qobj = qiskit.compile(qml._last_predict_circuits[0], execution_backend)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\"noise_params\": {\n",
-    "    \"U\": {\n",
-    "        \"p_depol\": 0.001,\n",
-    "        \"p_pauli\": [0, 0, 0.01],\n",
-    "        \"gate_time\": 1,\n",
-    "        \"U_error\": [\n",
-    "            [[1, 0], [0, 0]],\n",
-    "\n",
-    "            [[0, 0], [0.995004165, 0.099833417]]\n",
-    "        ]\n",
-    "    }\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4090"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sum([len(d.data) for d in qml._last_predict_circuits[0].data[0].data])\n",
-    "\n",
-    "# from qiskit.tools.visualization import circuit_drawer\n",
-    "\n",
-    "# qobj = qiskit.compile(qml._last_predict_circuits[0], execution_backend)\n",
-    "# cqc = qiskit.load_qasm_string(qobj.experiments[0].as_dict()['header']['compiled_circuit_qasm'])\n",
-    "\n",
-    "# circuit_drawer(cqc)"
-   ]
   }
  ],
  "metadata": {
@@ -535,7 +445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
