--- a/examples/NOT Example.ipynb
+++ b/examples/NOT Example.ipynb
@@ -199,15 +199,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "qml.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [
@@ -223,6 +214,7 @@
     }
    ],
    "source": [
+    "qml.fit(X_train, y_train)\n",
     "qml.predict(X_test), y_test"
    ]
   },
@@ -352,26 +344,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<qiskit.providers.ibmq.ibmqjob.IBMQJob at 0x22be5902b38>"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "execution_backend.retrieve_job('5c4b48be0627200056d57dc5')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
    "outputs": [
@@ -429,7 +401,6 @@
     }
    ],
    "source": [
-    "#print(qml._last_predict_circuits[0].qasm())\n",
     "qml._last_predict_circuits[0].draw(output='mpl')"
    ]
   },
@@ -459,15 +430,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "qml.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
    "outputs": [
@@ -483,6 +445,7 @@
     }
    ],
    "source": [
+    "qml.fit(X_train, y_train)\n",
     "qml.predict(X_test), y_test"
    ]
   },
@@ -504,8 +467,46 @@
     }
    ],
    "source": [
-    "#print(qml._last_predict_circuits[0].qasm())\n",
     "qml._last_predict_circuits[0].draw(output='mpl')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## On the real chip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "execution_backend: BaseBackend = qiskit.IBMQ.get_backend('ibmq_16_melbourne')\n",
+    "qml = QmlHadamardNeighborClassifier(backend=execution_backend,\n",
+    "                                    shots=8192,\n",
+    "                                    feature_map=feature_map,\n",
+    "                                    classifier_circuit_factory=initial_state_builder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qml.fit(X_train, y_train)\n",
+    "async_qml_job.job.status(), async_qml_job.job.job_id()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qml.last_predict_probability, qml.last_predict_p_acc"
    ]
   }
  ],
@@ -525,7 +526,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
