Fixing the badge finally!!

--- a/examples/Wine Data Set Example.ipynb
+++ b/examples/Wine Data Set Example.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -17,6 +19,26 @@
    "source": [
     "import qiskit\n",
     "from qiskit.providers import BaseBackend"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dc_qiskit_qml.feature_maps import NormedAmplitudeEncoding\n",
+    "from dc_qiskit_qml.distance_based.hadamard import QmlHadamardNeighborClassifier\n",
+    "from dc_qiskit_qml.distance_based.hadamard.state import QmlGenericStateCircuitBuilder\n",
+    "from dc_qiskit_qml.distance_based.hadamard.state.sparsevector import QiskitNativeStatePreparation\n",
+    "\n",
+    "initial_state_builder = QmlGenericStateCircuitBuilder(QiskitNativeStatePreparation())\n",
+    "\n",
+    "execution_backend: BaseBackend = qiskit.Aer.get_backend('qasm_simulator')\n",
+    "qml = QmlHadamardNeighborClassifier(backend=execution_backend,\n",
+    "                                    shots=8192, \n",
+    "                                    classifier_circuit_factory=initial_state_builder,\n",
+    "                                    feature_map=NormedAmplitudeEncoding())"
    ]
   },
   {
@@ -39,26 +61,6 @@
     "\n",
     "X_test = X[[28, 140]]\n",
     "y_test = y[[28, 140]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from dc_qiskit_qml.feature_maps import NormedAmplitudeEncoding\n",
-    "from dc_qiskit_qml.distance_based.hadamard import QmlHadamardNeighborClassifier\n",
-    "from dc_qiskit_qml.distance_based.hadamard.state import QmlGenericStateCircuitBuilder\n",
-    "from dc_qiskit_qml.distance_based.hadamard.state.sparsevector import QiskitNativeStatePreparation\n",
-    "\n",
-    "initial_state_builder = QmlGenericStateCircuitBuilder(QiskitNativeStatePreparation())\n",
-    "\n",
-    "execution_backend: BaseBackend = qiskit.Aer.get_backend('qasm_simulator')\n",
-    "qml = QmlHadamardNeighborClassifier(backend=execution_backend,\n",
-    "                                    shots=8192, \n",
-    "                                    classifier_circuit_factory=initial_state_builder,\n",
-    "                                    feature_map=NormedAmplitudeEncoding())"
    ]
   },
   {
