Adjusting the examples.

--- a/examples/NOT Example More in-depth.ipynb
+++ b/examples/NOT Example More in-depth.ipynb
@@ -46,11 +46,11 @@
     "X_test = np.asarray([[0.2, 0.4], [0.4, -0.8]])\n",
     "y_test = [0, 1]\n",
     "\n",
-    "from dc_qiskit_qml.feature_maps import FeatureMap\n",
+    "from dc_qiskit_qml.encoding_maps import EncodingMap\n",
     "import scipy.sparse as sparse\n",
     "\n",
     "\n",
-    "class MyFeatureMap(FeatureMap):\n",
+    "class MyEncodingMap(EncodingMap):\n",
     "        def map(self, input_vector: list) -> sparse.dok_matrix:\n",
     "            result = sparse.dok_matrix((4,1))\n",
     "            index = 0\n",
@@ -66,7 +66,7 @@
     "            return result\n",
     "\n",
     "\n",
-    "feature_map = MyFeatureMap()"
+    "encoding_map = MyEncodingMap()"
    ]
   },
   {
@@ -135,7 +135,7 @@
     "execution_backend: BaseBackend = qiskit.Aer.get_backend('qasm_simulator')\n",
     "qml = QmlHadamardNeighborClassifier(backend=execution_backend,\n",
     "                                    shots=8192,\n",
-    "                                    feature_map=feature_map,\n",
+    "                                    encoding_map=encoding_map,\n",
     "                                    classifier_circuit_factory=initial_state_builder)\n",
     "\n",
     "qml.fit(X_train, y_train)\n",
@@ -192,7 +192,7 @@
     "execution_backend: BaseBackend = qiskit.Aer.get_backend('qasm_simulator')\n",
     "qml = QmlHadamardNeighborClassifier(backend=execution_backend,\n",
     "                                    shots=8192,\n",
-    "                                    feature_map=feature_map,\n",
+    "                                    encoding_map=encoding_map,\n",
     "                                    classifier_circuit_factory=initial_state_builder)\n",
     "\n",
     "qml.fit(X_train, y_train)\n",
@@ -233,7 +233,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "qobj = qiskit.compile(qml._last_predict_circuits[0], backend=ibmq5)"
+    "transpiled_qc = qiskit.transpile(qml._last_predict_circuits[0], backend=ibmq5)\n",
+    "qobj = qiskit.assemble(transpiled_qc, backend=ibmq5)"
    ]
   },
   {
@@ -4916,9 +4917,8 @@
     }
    ],
    "source": [
-    "from qiskit.converters import circuit_to_dag, dag_to_circuit, qobj_to_circuits\n",
-    "print(\"Number of gates: {}.\\n\".format(len(qobj_to_circuits(qobj)[0].data)))\n",
-    "qobj_to_circuits(qobj)[0].draw(line_length=120)"
+    "print(\"Number of gates: {}.\\n\".format(len(transpiled_qc.data)))\n",
+    "transpiled_qc.draw(line_length=120)"
    ]
   }
  ],
@@ -4939,6 +4939,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.4"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
