--- a/examples/Wine Data Set Example.ipynb
+++ b/examples/Wine Data Set Example.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dc_qiskit_qml.feature_maps import NormedAmplitudeEncoding\n",
+    "from dc_qiskit_qml.encoding_maps import NormedAmplitudeEncoding\n",
     "from dc_qiskit_qml.distance_based.hadamard import QmlHadamardNeighborClassifier\n",
     "from dc_qiskit_qml.distance_based.hadamard.state import QmlGenericStateCircuitBuilder\n",
     "from dc_qiskit_qml.distance_based.hadamard.state.sparsevector import QiskitNativeStatePreparation\n",
@@ -38,7 +38,7 @@
     "qml = QmlHadamardNeighborClassifier(backend=execution_backend,\n",
     "                                    shots=8192, \n",
     "                                    classifier_circuit_factory=initial_state_builder,\n",
-    "                                    feature_map=NormedAmplitudeEncoding())"
+    "                                    encoding_map=NormedAmplitudeEncoding())"
    ]
   },
   {
@@ -186,6 +186,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.4"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
