--- a/examples/Wine Data Set Full Data full features.ipynb
+++ b/examples/Wine Data Set Full Data full features.ipynb
@@ -7,8 +7,7 @@
    "outputs": [],
    "source": [
     "import qiskit\n",
-    "from qiskit.providers import BaseBackend\n",
-    "from qiskit.providers.ibmq import IBMQBackend"
+    "from qiskit.providers import BaseBackend"
    ]
   },
   {
@@ -17,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dc_qiskit_qml.feature_maps import NormedAmplitudeEncoding\n",
+    "from dc_qiskit_qml.encoding_maps import NormedAmplitudeEncoding\n",
     "from dc_qiskit_qml.distance_based.hadamard import QmlHadamardNeighborClassifier\n",
     "from dc_qiskit_qml.distance_based.hadamard.state import QmlGenericStateCircuitBuilder\n",
     "from dc_qiskit_qml.distance_based.hadamard.state.sparsevector import MöttönenStatePreparation\n",
@@ -28,7 +27,7 @@
     "qml = QmlHadamardNeighborClassifier(backend=execution_backend,\n",
     "                                    shots=8192, \n",
     "                                    classifier_circuit_factory=initial_state_builder,\n",
-    "                                    feature_map=NormedAmplitudeEncoding())"
+    "                                    encoding_map=NormedAmplitudeEncoding())"
    ]
   },
   {
@@ -37,13 +36,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "from sklearn.preprocessing import StandardScaler, Normalizer\n",
-    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.datasets import load_wine\n",
-    "from sklearn.decomposition import PCA\n",
     "\n",
     "X, y = load_wine(True)"
    ]
@@ -175,6 +170,10 @@
     }
    ],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "colors = ['red', 'blue', 'green', 'orange']\n",
+    "\n",
     "plt.scatter(\n",
     "    pipeline.transform(X_train[:,0]), pipeline.transform(X_train[:,1]), \n",
     "    color=[colors[yy] for yy in y_train],\n",
@@ -16739,6 +16738,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.4"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
