--- a/examples/Wine Data Set Full Data.ipynb
+++ b/examples/Wine Data Set Full Data.ipynb
@@ -7,8 +7,7 @@
    "outputs": [],
    "source": [
     "import qiskit\n",
-    "from qiskit.backends import BaseBackend\n",
-    "from qiskit.backends.ibmq import IBMQBackend"
+    "from qiskit.providers import BaseBackend"
    ]
   },
   {
@@ -17,18 +16,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qiskit_qml.feature_maps import NormedAmplitudeEncoding\n",
-    "from qiskit_qml.distance_based.hadamard import QmlHadamardNeighborClassifier\n",
-    "from qiskit_qml.distance_based.hadamard.state import QmlGenericStateCircuitBuilder\n",
-    "from qiskit_qml.distance_based.hadamard.state.sparsevector import MöttönenStatePreparation\n",
+    "from dc_qiskit_qml.encoding_maps import NormedAmplitudeEncoding\n",
+    "from dc_qiskit_qml.distance_based.hadamard import QmlHadamardNeighborClassifier\n",
+    "from dc_qiskit_qml.distance_based.hadamard.state import QmlGenericStateCircuitBuilder\n",
+    "from dc_qiskit_qml.distance_based.hadamard.state.sparsevector import MöttönenStatePreparation\n",
     "\n",
     "initial_state_builder = QmlGenericStateCircuitBuilder(MöttönenStatePreparation())\n",
     "\n",
     "execution_backend: BaseBackend = qiskit.Aer.get_backend('qasm_simulator')\n",
     "qml = QmlHadamardNeighborClassifier(backend=execution_backend,\n",
     "                                    shots=8192, \n",
-    "                                    classifier_state_factory=initial_state_builder,\n",
-    "                                    feature_map=NormedAmplitudeEncoding())"
+    "                                    classifier_circuit_factory=initial_state_builder,\n",
+    "                                    encoding_map=NormedAmplitudeEncoding())"
    ]
   },
   {
@@ -142,8 +141,6 @@
     }
    ],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
     "_X_train, _X_test = pipeline.tranform(X_train), pipeline.transform(X_test)\n",
     "\n",
     "figure = plt.figure(figsize=(10,4.5), num=2)\n",
@@ -16784,6 +16781,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.4"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
