Full overhaul of the changes for the update. Still WIP.

--- a/examples/Iris Example.ipynb
+++ b/examples/Iris Example.ipynb
@@ -31,7 +31,7 @@
     "from dc_qiskit_qml.encoding_maps import NormedAmplitudeEncoding\n",
     "from dc_qiskit_qml.distance_based.hadamard import QmlHadamardNeighborClassifier\n",
     "from dc_qiskit_qml.distance_based.hadamard.state import QmlGenericStateCircuitBuilder\n",
-    "from dc_qiskit_qml.distance_based.hadamard.state.sparsevector import MöttönenStatePreparation"
+    "from dc_qiskit_qml.distance_based.hadamard.state.sparsevector import MottonenStatePreparation"
    ]
   },
   {
@@ -58,7 +58,7 @@
    "execution_count": 3,
    "outputs": [],
    "source": [
-    "initial_state_builder = QmlGenericStateCircuitBuilder(MöttönenStatePreparation())\n",
+    "initial_state_builder = QmlGenericStateCircuitBuilder(MottonenStatePreparation())\n",
     "\n",
     "execution_backend: BaseBackend = qiskit.Aer.get_backend('qasm_simulator')\n",
     "options = QiskitOptions(shots=8192,optimization_level=3)\n",
@@ -345,7 +345,7 @@
    "source": [
     "qiskit.transpile(circuits=qml._last_predict_circuits[0], \n",
     "                 basis_gates=['cx', 'u1', 'u2', 'u3'], \n",
-    "                 optimization_level=0).draw(line_length=120)"
+    "                 optimization_level=0).draw(fold=120)"
    ],
    "metadata": {
     "collapsed": false,
@@ -384,7 +384,7 @@
    "source": [
     "qiskit.transpile(circuits=qml._last_predict_circuits[0], \n",
     "                 basis_gates=['cx', 'u1', 'u2', 'u3'], \n",
-    "                 optimization_level=3).draw(line_length=120)"
+    "                 optimization_level=3).draw(fold=120)"
    ],
    "metadata": {
     "collapsed": false,
@@ -590,7 +590,7 @@
     }
    ],
    "source": [
-    "qiskit.transpile(circuits=qml._last_predict_circuits[0], optimization_level=0, backend=execution_backend).draw(line_length=120)"
+    "qiskit.transpile(circuits=qml._last_predict_circuits[0], optimization_level=0, backend=execution_backend).draw(fold=120)"
    ],
    "metadata": {
     "collapsed": false,
